@@ -4,5 +4,7 @@
 <dict>
 	<key>VRJConfigHandling</key>
 	<false/>
+	<key>VRJControllerClass</key>
+	<string>VrjMainController</string>
 </dict>
 </plist>
